@@ -15,9 +15,8 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
         (26,'main',NULL,'stats_off_fname','ss_tm_stats_roster_','File Name Prefix for the Team Roster Stats CSV File','text',0,'','','This will be located in your output folder, in a folder labelled by season.'),
         (27,'main',NULL,'stats_wc_fname','ss_tm_stats_wc_','File Name Prefix for the Wildcard Stats CSV File','text',0,'','','This will be located in your output folder, in a folder labelled by season.'),
         (98,'main',NULL,'registration','closed','User registration','select',0,'','open:Open; Anyone can register.\r\nconfirm:Confirm; Users must be confirmed\r\nclosed:Closed; registration is closed','Defines how user/team registrations are handled.\r\n\r\n<ul><li><b>open</b>: teams do not require confirmation to register a user. <strong><em>***Should only be used in the context of a private lan!***</em></strong></li><li><b>confirm</b>: teams must be confirmed by an admin.</li><li><b>closed</b>: teams are not allowed to register but admins can still register users in the team management section of the Admin CP.</li></ul>'),
-        (101,'main',NULL,'team_id','team_id','How to track teams?','select',0,'','team_id:Track by TEAM_ID\r\nname:Track by Team Name','Determines how teams are identified. If you change this value you will need to reset your stats.'),
         (102,'main',NULL,'gametype','ss','Game Type','select',0,'','ss:Scoresheet Games','Defines what type of game data to process.\r\n<b>See Also</b>: Mod Type'),
-        (103,'main',NULL,'modtype','bb','MOD Type','select',0,'',':(empty)\r\nbb:Scoresheet Baseball','Defines what type of MOD the game data is.\r\n<b>See Also:</b> Game Type'),
+        (103,'main',NULL,'modtype','bb','MOD Type','select',0,'','bb:Scoresheet Baseball','Defines what type of MOD the game data is.\r\n<b>See Also:</b> Game Type'),
         (105,'main',NULL,'theme','default','Default theme','text',0,'','size=16','Default theme name for users browsing the stats website.\r\n<b>See also:</b>: allow_user_change (theme config)'),
         (107,'main',NULL,'team_primary_name','last','Primary team name selection','select',0,NULL,'last:Last Used\r\nmost:Most Used\r\nfirst:First Used','What team name should be used for teams with more than one? (Ignored if team_id is \'name\')\r\n<b>last</b>: The last name the team is seen using will be used.\r\n<b>most</b>: The name the team has used the most is used.\r\n<b>first</b>: The first name the team is seen using will be used.'),
         (300,'main','errlog','maxdays','31','Maximum days to keep','text',0,'blank,numeric','size=5','Maximum number of days to keep error logs. This does not affect team stats.'),
