@@ -33,9 +33,7 @@ $cms->theme->assign_request_vars($validfields, true);
 // Set global season variable to default if undeclared.
 $season_c ??= $ps->get_season_c();
 		
-switch ($ps->conf['main']['team_id']) {
-	case 'team_id': $team_id_label = $cms->trans("Team #"); break;
-};
+$team_id_label = $cms->trans("Team #");
 
 $form = $cms->new_form();
 
