@@ -19,6 +19,7 @@ Version 0.0.4b (in progress)
 * [Changed] The last update time is now shown in the web client's local time.
 * [Fixed] More PHP 8 related warnings.
 * [Fixed] The Time Offset setting in the Admin CP Formats / HTML Configuration menu now works as originally intended and can handle minutes.
+* [Removed] The option to configure how teams are identified in the software.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
